# scarce

./: .gitignore  .gitmodules  README.md  config.ini  linker.ld  meson.build  meson.options  syntax.hsml
assets/core/shaders/: sprite.frag  text.frag  text.vert
scarce-engine/: meson.build
scarce-engine/src/: engine.h  scarce.h
scarce-engine/src/core/: defines.h  dynamic_array.c  dynamic_array.h  events.h  file_utils.c  file_utils.h  fixed_array.c  fixed_array.h  random.c  random.h  string_utils.c  string_utils.h
scarce-engine/src/core/assets/: asset_library.c  asset_library.h  asset_upload.c  asset_upload.h  spritesheet.h
scarce-engine/src/core/font/: font.c  font.h
scarce-engine/src/core/logging/: logger.c  logger.h
scarce-engine/src/core/memory/: general_allocator.h  linear_arena.c  linear_arena.h  memory.c  memory.h  memory_system.c  memory_system.h  stack.c  stack.h  stack_arena.c  stack_arena.h  tag.h
scarce-engine/src/core/physics/: aabb.c  aabb.h
scarce-engine/src/core/view/: view.c  view.h
scarce-engine/src/core/window/: window.c  window.h
scarce-engine/src/graphics/: batch_renderer.c  batch_renderer.h  buffer.h  color.c  color.h  graphics.c  graphics.h  pipeline.c  pipeline.h  shader.c  shader.h  text_renderer.c  text_renderer.h  texture.h
scarce-engine/src/platform/: key.h  mouse.h  platform.h
scarce-engine/src/platform/glfw/: window.c
scarce-engine/src/platform/linux/: breakpoint.c  file.c  memory.c  time.c  window.c  window.h
scarce-engine/src/platform/win32/: breakpoint.c  file.c
scarce-engine/src/rhi/: rhi.h
scarce-engine/src/rhi/opengl/: opengl_rhi.c  opengl_rhi.h  opengl_x11.c
scarce-engine/src/ui/: button.c  button.h  color.c  color.h  container.c  container.h  hsml.c  hsml.h  text_box.c  text_box.h  ui.c  ui.h
scarce-engine/src/ui/hsml/: conditional.c  conditional.h  defines.h  evaluator.c  evaluator.h  hsml.c  hsml.h  placeholder.c  placeholder.h  scrollbar.c  scrollbar.h  token.c  token.h
scarce-loader/: meson.build
scarce-loader/src/: engine.c  loader.c  loader.h  main.c
scarce-loader/src/config/: config.c  config.h  loader.c  loader.h
scarce-testbed/: meson.build
scarce-testbed/assets/: english.hsml  english_.hsml  ptbr.hsml  view.hsml
scarce-testbed/src/: main.c  map.h  view.c  view.h
scripts/: configure  post_install.py  release  run
subprojects/: stb.wrap
subprojects/packagefiles/stb/: meson.build
